@@ -1,3 +1,4 @@
+	* deprecated (unused) volatile_read_cache setting
 	* fix part files being marked as hidden on windows
 
 * 2.0.5 released
